--- a/dist.ini
+++ b/dist.ini
@@ -13,9 +13,11 @@ version = 0.002002
 allow_dirty  = Changes
 allow_dirty  = dist.ini
 allow_dirty  = README.mkdn
+allow_dirty  = cpanfile
 add_files_in = Changes
 add_files_in = dist.ini
 add_files_in = README.mkdn
+add_files_in = cpanfile
 tag_format   = '%v'
 tag_message  = 'dist %v'
 untracked_files = warn
@@ -56,13 +58,7 @@ check_all_prereqs = 1
 ;skip = strict
 ;skip = overload
 
-[Prereqs]
-Exporter::Tiny = 0
-
-[Prereqs / TestRequires]
-; 0.96 for subtests without plan
-; 0.88 for done_testing
-Test::More = 0.88
+[Prereqs::FromCPANfile]
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
