--- a/dist.ini
+++ b/dist.ini
@@ -35,8 +35,10 @@ die_on_existing_version = 1
 ;; Fixes off-by-one src lines:
 die_on_line_insertion = 1
 
-[ReadmeFromPod]
-[ReadmeMarkdownFromPod]
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.mkdn
+location = build
 
 ;[CheckExtraTests]
 [PodCoverageTests]
